about section of the page done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,77 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Roland and Benard Portfoio</h1>
-    
+    <div class="container-fluid p-5 bg-dark right-padding">
+        <div class="row">
+            <div class="col-sm-6 bottom-margin right-col-padding">
+                <h3>About me</h3>
+                <p>
+                    Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+                </p>
+                <button type="button" class="btn btn-color">Get My Resume</button>
+            </div>
+            <div class="col-sm-6 background"></div>
+        </div>
+    </div>
+    <div class="container-fluid p-5 bg-dark text-white">
+        <div class="row">
+            <div class="col-sm-12">
+                <hr>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid p-5 bg-dark text-white">
+        <div class="row">
+            <div class="col-sm-4">
+                <h4><img class="img-icon" src="img/language.svg" alt=""> Language</h4>
+                <div class="clearfix"></div>
+                <p>Javascript</p>
+                <p>Ruby</p>
+                <p>Html</p>
+                <p>Css</p>
+            </div>
+            <div class="col-sm-4">
+                <h4><img class="img-icon" src="img/framework.svg" alt=""> Frameworks</h4>
+                <div class="clearfix"></div>
+                <p>Bootstrap</p>
+                <p>Ruby on Rails</p>
+                <p>RSPec</p>
+                <p>CapyBara</p>
+                <p>Selenium</p>
+            </div>
+            <div class="col-sm-4">
+                <h4><img class="img-icon" src="img/skills.svg" alt=""> Skills</h4>
+                <div class="clearfix"></div>
+                <p>Codekit</p>
+                <p>Github</p>
+                <p>Codepen</p>
+                <p>Gitlab</p>
+                <p>Terminal</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid p-5 bg-white">
+        <div class="row">
+            <div class="col-sm-5">
+                <p class="contact-description">
+                    I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+                </p>
+            </div>
+            <div class="col-sm-7">
+                <form action="https://formspree.io/f/xoqrloon" method="post">
+                    <div class="form-group">
+                        <label for="name">Full Name:</label>
+                        <input type="text" class="form-control" name="name" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address:</label>
+                        <input type="email" class="form-control" name="email" id="email">
+                    </div>
+                    <button type="submit" class="btn btn-color">Get in touch</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
