--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -60,26 +61,40 @@
     </div>
     <div class="container-fluid p-5 bg-white">
         <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-4">
                 <p class="contact-description">
                     I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
                 </p>
             </div>
-            <div class="col-sm-7">
+            <div class="col-sm-8">
                 <form action="https://formspree.io/f/xoqrloon" method="post">
                     <div class="form-group">
                         <label for="name">Full Name:</label>
-                        <input type="text" class="form-control" name="name" id="name">
+                        <input type="text" class="form-control" name="name" id="name" maxlength="30" placeholder="Enter your name" required>
                     </div>
+                    <div class="clearfix-sm"></div>
                     <div class="form-group">
                         <label for="email">Email address:</label>
-                        <input type="email" class="form-control" name="email" id="email">
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email address" required>
                     </div>
+                    <div class="clearfix-sm"></div>
+                    <div class="form-group">
+                        <textarea class="form-control" name="email" id="message" name="message" placeholder="Enter your message here..." maxlength="500" required></textarea>
+                    </div>
+                    <div class="clearfix"></div>
                     <button type="submit" class="btn btn-color">Get in touch</button>
                 </form>
             </div>
         </div>
     </div>
-
+    <div class="container-fluid p-5 bg-white text-center top-border">
+        <div class="social">
+            <a href="#"><img src="img/github.png" alt="Github"></a>
+            <a href="#"><img src="img/linkedin.png" alt="Linkedin"></a>
+            <a href="#"><img src="img/angellist.png" alt="Angellist"></a>
+            <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="img/medium.png" alt="Medium"></a>
+        </div>
+    </div>
 </body>
 </html>
