Add nav and hero section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,110 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav
+      class="bg-dark navbar navbar-expand-lg navbar-light bg-light myNav"
+      style="width: 100%"
+    >
+      <div class="container-fluid" style="width: 100vw">
+        <a class="navbar-brand text-white" href="#">Roland Benard</a>
+        <button
+          class="bg-white navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="text-white navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="text-white justify-content-end collapse navbar-collapse"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav mb-lg-0">
+            <li class="nav-item">
+              <a class="text-white nav-link active" aria-current="page" href="#"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="text-white nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="text-white nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="text-white nav-link" href="#"
+                ><i class="fa fa-envelope-o" aria-hidden="true"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <section class="hero container-fluid-sm p-5">
+        <ul
+          class="nav flex-column position-absolute top-50 start-15 translate-middle-y"
+        >
+          <li class="nav-item">
+            <a class="nav-link link-light h3" aria-current="page" href="#"
+              ><i class="git fa fa-github" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-light h3" href="#"
+              ><i class="fa fa-linkedin" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-light h3" href="#"
+              ><i class="fa fa-twitter" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-light h3" href="#"
+              ><i class="fa fa-instagram" aria-hidden="true"></i
+            ></a>
+          </li>
+        </ul>
+
+        <div class="herobody">
+          <div class="heroHeader position-absolute top-50">
+            <h1>We are Roland and Benard</h1>
+          </div>
+
+          <div class="work position-absolute top-50">
+            <h2>We are Software Developers</h2>
+          </div>
+
+          <div class="elaborate position-absolute top-50">
+            <p>
+              we can help you build a product , feature or website Look through
+              some of our work and experience! If you like what you see and have
+              a project you need coded, don't hestiate to contact us.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- project section -->
+      <section class="myWorks container">
+        <div class="myWorksHeading">
+          <h2 class="float-md-start">Our Recent Works</h2>
+          <hr class="hr" />
+        </div>
+        <div class="col-sm-12 container featuredproduct my-5">
+          <div class="row row-cols-2">
+            <div class="col-7 col-sm-8 my-5">
+              <img
+                class="col-sm-9"
+                src="img/Placeholder.png"
+                alt="Featured work image"
+              />
+            </div>
+
+   
     <div class="container-fluid p-5 bg-dark right-padding">
         <div class="row">
             <div class="col-sm-6 bottom-margin right-col-padding">
